[gd_scene load_steps=2 format=3 uid="uid://ck3hjt4vd3f2m"]

[ext_resource type="Script" uid="uid://bsb1nhyvp7lc7" path="res://scripts/settings_menu_manager.gd" id="1_0714f"]

[node name="SettingsMenu" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -185.5
offset_right = 178.0
offset_bottom = 185.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0714f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Text-Based UI Elements"
vertical_alignment = 1

[node name="ShowTextUiButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play Background Music"
vertical_alignment = 1

[node name="BackgroundMusicButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play Sound Effects"
vertical_alignment = 1

[node name="SoundEffectsButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
text = "Background Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer5/VBoxContainer"]
layout_mode = 2
text = "Sound Effect Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundEffectVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer5/VBoxContainer"]
layout_mode = 2
max_value = 10.0
step = 0.5

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/ShowTextUiButton" to="." method="_on_show_text_ui_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/BackgroundMusicButton" to="." method="_on_background_music_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer/SoundEffectsButton" to="." method="_on_sound_effects_button_toggled"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer4/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer5/VBoxContainer/SoundEffectVolumeSlider" to="." method="_on_sound_effect_volume_slider_drag_ended"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
